<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.admiral.uikit.layout.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/cells_base_label_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/module_x6"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/cells_label_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/labelTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnLeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/standardTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/cells_leading_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/standardTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnTrailing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/logoTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/cells_trailing_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/logoTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

    </com.admiral.uikit.layout.LinearLayout>

</ScrollView>
