<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainMenuHome"
        android:enabled="true"
        android:icon="@drawable/admiral_ic_settings_solid"
        android:title="@string/menu_toolbar_settings" />
</menu>
