...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/title_cells_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/module_x6"
            android:paddingStart="@dimen/module_x4"
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
...
