<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <com.admiral.uikit.layout.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/check_box_title"
            app:admiralTextStyle="largetitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.admiral.uikit.components.tabs.StandardTabs
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@id/defaultTab"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/defaultTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_default" />

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/disabledTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_disabled" />

        </com.admiral.uikit.components.tabs.StandardTabs>

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/tvDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x9"
            android:text="@string/check_box_default"
            app:admiralTextColorNormalEnabled="@color/grey_40"
            app:admiralTextStyle="headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

        <com.admiral.uikit.components.checkbox.CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefault" />

        <com.admiral.uikit.components.checkbox.CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            android:text="@string/check_box_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox1" />

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/tvDefault1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x9"
            android:text="@string/check_box_selected"
            app:admiralTextColorNormalEnabled="@color/grey_40"
            app:admiralTextStyle="headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox2" />

        <com.admiral.uikit.components.checkbox.CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefault1" />

        <com.admiral.uikit.components.checkbox.CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            android:checked="true"
            android:text="@string/check_box_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox3" />

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/tvDefault2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x9"
            android:text="@string/check_box_error"
            app:admiralTextColorNormalEnabled="@color/grey_40"
            app:admiralTextStyle="headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox4" />

        <com.admiral.uikit.components.checkbox.CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            app:admiralIsError="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefault2" />

        <com.admiral.uikit.components.checkbox.CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            android:text="@string/check_box_text"
            app:admiralIsError="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox5" />

    </com.admiral.uikit.layout.ConstraintLayout>

</ScrollView>
